@startuml

title __GAME's Class Diagram__\n

  package cz.kksffn {
    package game {
      class cz.kksffn.game.CommunicationWithUser {
          {static} - sc : Scanner
          {static} + inputCoordinates()
          {static} + inputInt()
          {static} + inputString()
          {static} + inputYesNo()
          - CommunicationWithUser()
      }
    }
  }
  

  package cz.kksffn {
    package game {
      class cz.kksffn.game.Referee {
          - numberOfMoves : int
          - player1Guess : int
          - player1Guesses : ArrayList<Integer>
          - player1Move : boolean
          - player1Ships : HashMap<ShipName, ArrayList<Integer>>
          - player2Guess : int
          - player2Guesses : ArrayList<Integer>
          - player2Ships : HashMap<ShipName, ArrayList<Integer>>
          + Referee()
          - alreadyGuessed()
          - checkHit()
          - display()
          - displayBoards()
          - endGame()
          - gameLoop()
          - isSunk()
          - prepareGame()
          - sink()
      }
    }
  }
  

  cz.kksffn.game.Referee o-- cz.kksffn.display.IMap : mapOfPlayer1Ships
  cz.kksffn.game.Referee o-- cz.kksffn.display.IMap : mapOfPlayersGuesses
  cz.kksffn.game.Referee o-- cz.kksffn.player.IPlayer : player1
  cz.kksffn.game.Referee o-- cz.kksffn.player.IPlayer : player2


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
